--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -15,3 +15,7 @@ jobs:
         run: docker build . --file Dockerfile --build-arg BUILD_JAVA_VERSION=${{ matrix.java }} --build-arg BUILD_GRAAL_VERSION=${{ matrix.graalvm }} --tag lustefaniak/graalvm:${{ matrix.java }}-${{ matrix.graalvm }}-${{ github.sha }}
       - name: Test it starts
         run: docker run --rm lustefaniak/graalvm:${{ matrix.java }}-${{ matrix.graalvm }}-${{ github.sha }}
+      - name: Login to Docker Hub
+        run: echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
+      - name: Push snapshot version
+        run: docker push lustefaniak/graalvm:${{ matrix.java }}-${{ matrix.graalvm }}-${{ github.sha }}
