--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -16,6 +16,16 @@ jobs:
       - name: Test it starts
         run: docker run --rm lustefaniak/graalvm:${{ matrix.java }}-${{ matrix.graalvm }}-${{ github.sha }}
       - name: Login to Docker Hub
-        run: echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u lustefaniak --password-stdin
+        run: echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
       - name: Push snapshot version
         run: docker push lustefaniak/graalvm:${{ matrix.java }}-${{ matrix.graalvm }}-${{ github.sha }}
+      - name: Push from master
+        run: |
+          if [ "${{ github.ref }}" = "master" ]; then
+            docker tag lustefaniak/graalvm:${{ matrix.java }}-${{ matrix.graalvm }}-${{ github.sha }} lustefaniak/graalvm:${{ matrix.java }}-${{ matrix.graalvm }}
+            docker tag lustefaniak/graalvm:${{ matrix.java }}-${{ matrix.graalvm }}-${{ github.sha }} lustefaniak/graalvm:${{ matrix.java }}
+            docker push lustefaniak/graalvm:${{ matrix.java }}-${{ matrix.graalvm }}
+            docker push lustefaniak/graalvm:${{ matrix.java }}            
+          else
+            echo "Not master branch, skipping..."
+          fi
