--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -8,23 +8,24 @@ jobs:
     strategy:
       matrix:
         graalvm: [20.3.0]
+        java: [11]
     steps:
       - uses: actions/checkout@v1
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --build-arg BUILD_GRAAL_VERSION=${{ matrix.graalvm }} --tag lustefaniak/graalvm:11-${{ matrix.graalvm }}-${{ github.sha }}
+        run: docker build . --file Dockerfile --build-arg JAVA_VERSION=${{ matrix.java }} --build-arg GRAAL_VERSION=${{ matrix.graalvm }} --tag lustefaniak/graalvm:${{ matrix.java }}-${{ matrix.graalvm }}-${{ github.sha }}
       - name: Test it starts
-        run: docker run --rm lustefaniak/graalvm:11-${{ matrix.graalvm }}-${{ github.sha }}
+        run: docker run --rm lustefaniak/graalvm:${{ matrix.java }}-${{ matrix.graalvm }}-${{ github.sha }}
       - name: Login to Docker Hub
         run: echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u lustefaniak --password-stdin
       - name: Push snapshot version
-        run: docker push lustefaniak/graalvm:11-${{ matrix.graalvm }}-${{ github.sha }}
+        run: docker push lustefaniak/graalvm:${{ matrix.java }}-${{ matrix.graalvm }}-${{ github.sha }}
       - name: Push from master
         run: |
           if [ "${{ github.ref }}" = "refs/heads/master" ]; then
-            docker tag lustefaniak/graalvm:11-${{ matrix.graalvm }}-${{ github.sha }} lustefaniak/graalvm:11-${{ matrix.graalvm }}
-            docker tag lustefaniak/graalvm:11-${{ matrix.graalvm }}-${{ github.sha }} lustefaniak/graalvm:11
-            docker push lustefaniak/graalvm:11-${{ matrix.graalvm }}
-            docker push lustefaniak/graalvm:11            
+            docker tag lustefaniak/graalvm:${{ matrix.java }}-${{ matrix.graalvm }}-${{ github.sha }} lustefaniak/graalvm:${{ matrix.java }}-${{ matrix.graalvm }}
+            docker tag lustefaniak/graalvm:${{ matrix.java }}-${{ matrix.graalvm }}-${{ github.sha }} lustefaniak/graalvm:${{ matrix.java }}
+            docker push lustefaniak/graalvm:${{ matrix.java }}-${{ matrix.graalvm }}
+            docker push lustefaniak/graalvm:${{ matrix.java }}            
           else
             echo "Not master branch, skipping..."
           fi
