--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -7,8 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        graalvm: [21.0.0]
-        java: [11]
+        graalvm: [21.2.0.1]
+        java: [11, 16]
     steps:
       - uses: actions/checkout@v1
       - name: Build the Docker image
